tests/sumo/output/e3/errors/lane_false__exit/errors.sumo
Error: The lane with the id 'sss' is not known (while building e3Detector '4/1to3/1').
Quitting (on error).
